--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@macawkit/base",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Base classes for MacawKit projects",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -16,7 +16,8 @@
     "build:tests": "npm run build test",
     "build:release": "npm run build release",
     "pretest": "npm run build:tests",
-    "test": "node dist/test.js"
+    "test": "node dist/test.js",
+    "prepack": "npm run build:release"
   },
   "author": {
     "name": "Yury Gubich",
