--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "alwaysStrict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitAny": true
+    "strictPropertyInitialization": true
   },
   "files": ["src/index.ts"]
 }
