--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,12 @@ name: Main CI
 on: [push]
 
 jobs:
-  main:
-    runs-on: ubuntu-latest
+  check:
+    name: Run checks for Node version ${{ matrix.node-version }}
     strategy:
       matrix:
         node-version: [ '18.x', '20.x', '22.x' ]
 
-    steps:
-      - name: Run checks for Node version ${{ matrix.node-version }}
-        uses: ./.github/workflows/check.yml
-        with:
-          node-version: ${{ matrix.node-version }}
+    uses: ./.github/workflows/check.yml
+    with:
+      node-version: ${{ matrix.node-version }}
