--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - uses: actions/checkout@v4
       - name: Use Environment
         uses: ./.github/workflows/use-environment.yml
         with:
@@ -28,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
+      - uses: actions/checkout@v4
       - name: Setup Environment
         uses: ./.github/workflows/use-environment.yml
         with:
