--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,11 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Environment
-        uses: ./.github/workflows/use-environment.yml
+      - name: Use Node.js ${{ inputs.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ inputs.node-version }}
+
+      - name: Use Workspace
+        uses: actions/cache/restore@v4
+        with:
+          path: ${{ github.workspace }}
+          key: env-${{ github.run_id }}-${{ inputs.node-version }}
 
       - name: Run linter
         run: npm run lint
@@ -30,10 +35,17 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Environment
-        uses: ./.github/workflows/use-environment.yml
+
+      - name: Use Node.js ${{ inputs.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ inputs.node-version }}
+
+      - name: Use Workspace
+        uses: actions/cache/restore@v4
+        with:
+          path: ${{ github.workspace }}
+          key: env-${{ github.run_id }}-${{ inputs.node-version }}
 
       - name: Run tests
         run: npm test
