--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,16 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - name: Use Node.js ${{ inputs.node-version }}
-        uses: actions/setup-node@v4
+      - name: Use Environment
+        uses: ./.github/workflows/use-environment.yml
         with:
           node-version: ${{ inputs.node-version }}
-
-      - name: Use Workspace
-        uses: actions/cache/restore@v4
-        with:
-          path: ${{ github.workspace }}
-          key: env-${{ github.run_id }}-${{ inputs.node-version }}
 
       - name: Run linter
         run: npm run lint
@@ -34,18 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ inputs.node-version }}
-        uses: actions/setup-node@v4
+      - name: Use Environment
+        uses: ./.github/workflows/use-environment.yml
         with:
           node-version: ${{ inputs.node-version }}
-
-      - name: Use Workspace
-        uses: actions/cache/restore@v4
-        with:
-          path: ${{ github.workspace }}
-          key: env-${{ github.run_id }}-${{ inputs.node-version }}
 
       - name: Run tests
         run: npm test
