--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,7 @@ jobs:
     needs: setup
     steps:
       - name: Use Environment
-        uses: ./.github/workflows/use-environment.yml
+        uses: ./.github/use-environment
         with:
           node-version: ${{ inputs.node-version }}
 
@@ -29,7 +29,7 @@ jobs:
     needs: lint
     steps:
       - name: Use Environment
-        uses: ./.github/workflows/use-environment.yml
+        uses: ./.github/use-environment
         with:
           node-version: ${{ inputs.node-version }}
 
