--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,30 @@ name: Main CI
 on: [push]
 
 jobs:
-  check:
-    name: Run checks for Node version ${{ matrix.node-version }}
-    strategy:
-      matrix:
-        node-version: [ '18.x', '20.x', '22.x' ]
+#  check:
+#    name: Run checks for Node version ${{ matrix.node-version }}
+#    strategy:
+#      matrix:
+#        node-version: [ '18.x', '20.x', '22.x' ]
+#
+#    uses: ./.github/workflows/check.yml
+#    with:
+#      node-version: ${{ matrix.node-version }}
 
+  check18:
+    name: Run checks for Node.js 18
     uses: ./.github/workflows/check.yml
     with:
-      node-version: ${{ matrix.node-version }}
+      node-version: 18.x
+
+  check20:
+    name: Run checks for Node.js 20
+    uses: ./.github/workflows/check.yml
+    with:
+      node-version: 20.x
+
+  check22:
+    name: Run checks for Node.js 22
+    uses: ./.github/workflows/check.yml
+    with:
+      node-version: 22.x
