--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Use Environment
         uses: ./.github/use-environment
         with:
@@ -28,6 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Use Environment
         uses: ./.github/use-environment
         with:
