--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,11 +8,13 @@ on:
 
 jobs:
   setup:
+    name: Set up Environment
     uses: ./.github/workflows/cache-environment.yml
     with:
       node-version: ${{ inputs.node-version }}
 
   lint:
+    name: Run Lint Checks
     runs-on: ubuntu-latest
     needs: setup
     steps:
@@ -28,6 +30,7 @@ jobs:
         run: npm run lint
 
   test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: lint
     steps:
