--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Main CI
 on: [push]
 
 jobs:
+# it just looks nicer on the graph when you don't use matrix
 #  check:
 #    name: Run checks for Node version ${{ matrix.node-version }}
 #    strategy:
@@ -13,19 +14,19 @@ jobs:
 #      node-version: ${{ matrix.node-version }}
 
   check18:
-    name: Run checks for Node.js 18
+    name: Run Checks for Node.js 18
     uses: ./.github/workflows/check.yml
     with:
       node-version: 18.x
 
   check20:
-    name: Run checks for Node.js 20
+    name: Run Checks for Node.js 20
     uses: ./.github/workflows/check.yml
     with:
       node-version: 20.x
 
   check22:
-    name: Run checks for Node.js 22
+    name: Run Checks for Node.js 22
     uses: ./.github/workflows/check.yml
     with:
       node-version: 22.x
