--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:tests": "npm run build test",
     "build:release": "npm run build release",
     "pretest": "npm run --silent build:tests",
-    "test": "node --test --experimental-test-coverage --test-reporter=spec",
+    "test": "node --test --test-reporter=spec",
+    "test:coverage": "node --test --experimental-test-coverage",
     "prepack": "npm run build:release",
     "lint": "eslint ."
   },
