--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: Main CI
 on: [push]
 
 jobs:
+  lint:
+    name: Run Lint Check
+    uses: ./github/workflows/lint.yml
+
 # it just looks nicer on the graph when you don't use matrix
 #  check:
 #    name: Run checks for Node version ${{ matrix.node-version }}
@@ -14,18 +18,21 @@ jobs:
 #      node-version: ${{ matrix.node-version }}
 
   check18:
+    needs: lint
     name: Run Checks for Node.js 18
     uses: ./.github/workflows/check.yml
     with:
       node-version: 18.x
 
   check20:
+    needs: lint
     name: Run Checks for Node.js 20
     uses: ./.github/workflows/check.yml
     with:
       node-version: 20.x
 
   check22:
+    needs: lint
     name: Run Checks for Node.js 22
     uses: ./.github/workflows/check.yml
     with:
