--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.57.0",
     "@eslint/js": "^9.8.0",
     "@types/eslint__js": "^8.42.3",
+    "typescript-eslint": "^7.17.0",
     "@types/node": "^20.14.11",
     "esbuild": "^0.23.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.17.0"
+    "typescript": "^5.5.4"
   }
 }
