--- a/.github/workflows/cache-environment.yml
+++ b/.github/workflows/cache-environment.yml
@@ -31,5 +31,8 @@ jobs:
       - name: Cache environment
         uses: actions/cache/save@v4
         with:
-          path: ${{ github.workspace }}
+          path: |
+            **/node_modules
+            package-lock.json
+            package.json
           key: env-${{ github.run_id }}-${{ inputs.node-version }}
