--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,33 +7,13 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
 # it just looks nicer on the graph when you don't use matrix
-#  check:
-#    name: Run checks for Node version ${{ matrix.node-version }}
-#    strategy:
-#      matrix:
-#        node-version: [ '18.x', '20.x', '22.x' ]
-#
-#    uses: ./.github/workflows/check.yml
-#    with:
-#      node-version: ${{ matrix.node-version }}
-
-  check18:
+  check:
     needs: lint
-    name: Run Checks for Node.js 18
+    name: Run checks for Node version ${{ matrix.node-version }}
+    strategy:
+      matrix:
+        node-version: [ '18.x', '20.x', '22.x' ]
+
     uses: ./.github/workflows/check.yml
     with:
-      node-version: 18.x
-
-  check20:
-    needs: lint
-    name: Run Checks for Node.js 20
-    uses: ./.github/workflows/check.yml
-    with:
-      node-version: 20.x
-
-  check22:
-    needs: lint
-    name: Run Checks for Node.js 22
-    uses: ./.github/workflows/check.yml
-    with:
-      node-version: 22.x
+      node-version: ${{ matrix.node-version }}
