--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,14 +5,14 @@ on:
       node-version:
         required: true
         type: string
+  workflow_dispatch:
+    inputs:
+      node-version:
+        description: "A version of Node.js the project should be tested for"
+        type: string
+        default: "latest"
 
 jobs:
-  setup:
-    name: Set up Environment
-    uses: ./.github/workflows/cache-environment.yml
-    with:
-      node-version: ${{ inputs.node-version }}
-
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Use Environment
-        uses: ./.github/use-environment
+        uses: ./.github/install-brief
         with:
           node-version: ${{ inputs.node-version }}
 
