Decorators to protect from use after free Signals deliver async messages even after destruction Utility classes and tests Started the README

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "ESNext",
     "isolatedDeclarations": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "alwaysStrict": true,
